--- a/css/style.css
+++ b/css/style.css
@@ -6741,3 +6741,9 @@ h6 {
   margin: auto;
     width: 60%;
 }
+@media (max-width: 576px) {
+  /* line 150, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_blog_part.scss */
+  .pet_care_area {
+    display: none;
+  }
+}
