--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,7 @@ h3 {
 @media (max-width: 767px) {
   /* line 2, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_section_title.scss */
   .section_title h3 {
-    font-size: 27px;
+    font-size: 31px;
     line-height: 33px;
   }
 }
@@ -3385,7 +3385,7 @@ h3 {
 .contact_anipat {
   background-position: center center;
   background-size: cover;
-  padding-top: 80px;
+  padding-top: 50px;
   padding-bottom: 40px;
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -3395,7 +3395,7 @@ h3 {
   /* line 5, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_anipat.scss */
   .contact_anipat {
     background-size: cover;
-    padding: 110px 0;
+    padding: 50px 0;
   }
 }
 
@@ -3406,11 +3406,11 @@ h3 {
 
 /* line 21, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_anipat.scss */
 .contact_anipat .contact_text .section_title p {
-  font-size: 25px;
+  /*font-size: 25px;*/
   color: #fff;
-  line-height: 40px;
-  margin-top: 35px;
-  margin-bottom: 50px;
+  /*line-height: 40px;*/
+  /*margin-top: 35px;*/
+  /*margin-bottom: 50px;*/
 }
 
 @media (max-width: 767px) {
